gh-pages: Fix routing issues
Fixes routing with custom 404.html
Adds an about page
Adds 404.html to process requests

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/NIT-dgp/UIP/issues"
   },
-  "homepage": "https://github.com/NIT-dgp/UIP#readme",
+  "homepage": "https://nit-dgp.github.io/UIP/",
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
